[Add] API for world lockdown status
